--- a/static/shared-header-footer/footer.html
+++ b/static/shared-header-footer/footer.html
@@ -35,7 +35,7 @@
         <li><a id="footer-services-selling-online-overseas" href="http://selling-online-overseas.export.great.gov.uk">Sell online overseas</a></li>
         <li><a id="footer-services-export-opportunities" href="http://opportunities.export.great.gov.uk">Find export opportunities</a></li>
         <li><a id="footer-services-get-finance" href="http://great.gov.uk/get-finance">Get finance</a></li>
-        <li><a id="footer-services-events" href="http://events.trade.gov.uk">Attend events</a></li>
+        <li><a id="footer-services-events" href="http://events.trade.gov.uk">Find events and visits</a></li>
       </ul>
     </div>
   </nav>
